<?xml version="1.0"?>
<package format="3">
  <name>emm_v5_mpc_controller</name>
  <version>0.1.0</version>
  <description>MPC-style FollowJointTrajectory bridge for emm_v5 segmented hardware.</description>
  <maintainer email="li@example.com">li</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
