<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zero_arm_bringup</name>
  <version>0.1.0</version>
  <description>
    Bringup launch files and configs to run zero_arm with MoveIt2 on real Emm_V5.0 CAN hardware.
  </description>

  <maintainer email="836021389@qq.com">li</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>moveit_config</exec_depend>
  <exec_depend>zero_arm_description</exec_depend>
  <exec_depend>emm_v5_hardware</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
